Your update message here

--- a/public/test2.html
+++ b/public/test2.html
@@ -6,6 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ExitMyTimeshares.com | Do It Yourself Timeshare Exit Kit ($229|£169|€199)</title>
 
+  <style>
+    .goog-te-banner-frame.skiptranslate, 
+    .goog-te-gadget-icon, 
+    .goog-te-balloon-frame, 
+    .goog-logo-link, 
+    .goog-te-gadget-simple,
+    #goog-gt-tt, 
+    .goog-te-menu-value, 
+    .goog-te-menu-frame.skiptranslate {
+      display: none !important;
+    }
+    body {
+      top: 0 !important;
+    }
+  </style>
+
   <!-- SEO Meta Tags -->
   <meta name="description"
         content="Stuck in a timeshare? Our lawyer-vetted, Do-It-Yourself Exit Kit ($229|£169|€199) gives you step-by-step templates to cancel your contract—no lawyers required. 3–6 week turnaround, money-back guarantee." />
