Your update message here

--- a/public/test2.html
+++ b/public/test2.html
@@ -1,55 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="images/favicon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ExitMyTimeshares.com | Do It Yourself Timeshare Exit Kit ($229|£169|€199)</title>
-
-  <style>
-    .goog-te-banner-frame.skiptranslate, 
-    .goog-te-gadget-icon, 
-    .goog-te-balloon-frame, 
-    .goog-logo-link, 
-    .goog-te-gadget-simple,
-    #goog-gt-tt, 
-    .goog-te-menu-value, 
-    .goog-te-menu-frame.skiptranslate {
-      display: none !important;
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ExitMyTimeshares.com | Do It Yourself Timeshare Exit Kit ($229|£169|€199)</title>
+  
+    <!-- Hide Google Translate Bar + Branding -->
+    <style>
+      .goog-te-banner-frame.skiptranslate, 
+      .goog-te-gadget-icon, 
+      .goog-te-balloon-frame, 
+      .goog-logo-link, 
+      .goog-te-gadget-simple,
+      #goog-gt-tt, 
+      .goog-te-menu-value, 
+      .goog-te-menu-frame.skiptranslate {
+        display: none !important;
+      }
+      body {
+        top: 0 !important;
+      }
+    </style>
+  
+    <!-- SEO Meta Tags -->
+    <meta name="description"
+          content="Stuck in a timeshare? Our lawyer-vetted, Do-It-Yourself Exit Kit ($229|£169|€199) gives you step-by-step templates to cancel your contract—no lawyers required. 3–6 week turnaround, money-back guarantee." />
+    <meta name="keywords"
+          content="timeshare exit, cancel timeshare, DIY timeshare, timeshare cancellation kit, timeshare cancellation letters, club la costa, hilton resorts, diamond resorts, dri, anfi, wyndham, marriott, diamond" />
+  
+    <!-- Structured Data for Google (Product & Offer) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Product",
+      "name": "Do-It-Yourself Timeshare Exit Kit",
+      "image": "https://www.exitmytimeshares.com/images/kit-preview.jpg",
+      "description": "Lawyer-vetted cancellation letters & guide for €169, 3–6 week process, money-back guarantee.",
+      "brand": {
+        "@type": "Organization",
+        "name": "Quaerens Ltd"
+      },
+      "offers": {
+        "@type": "Offer",
+        "url": "https://www.exitmytimeshares.com/download-kit.html",
+        "priceCurrency": "EUR",
+        "price": "169.00",
+        "availability": "https://schema.org/InStock"
+      }
     }
-    body {
-      top: 0 !important;
-    }
-  </style>
-
-  <!-- SEO Meta Tags -->
-  <meta name="description"
-        content="Stuck in a timeshare? Our lawyer-vetted, Do-It-Yourself Exit Kit ($229|£169|€199) gives you step-by-step templates to cancel your contract—no lawyers required. 3–6 week turnaround, money-back guarantee." />
-  <meta name="keywords"
-        content="timeshare exit, cancel timeshare, DIY timeshare, timeshare cancellation kit, timeshare cancellation letters, club la costa, hilton resorts, dimaond resorts, dri, anfi, wyndham, marriot, diamond  " />
-
-  <!-- Structured Data for Google (Product & Offer) -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Product",
-    "name": "Do-It-Yourself Timeshare Exit Kit",
-    "image": "https://www.exitmytimeshares.com/images/kit-preview.jpg",
-    "description": "Lawyer-vetted cancellation letters & guide for €169, 3–6 week process, money-back guarantee.",
-    "brand": {
-      "@type": "Organization",
-      "name": "Quaerens Ltd"
-    },
-    "offers": {
-      "@type": "Offer",
-      "url": "https://www.exitmytimeshares.com/download-kit.html",
-      "priceCurrency": "EUR",
-      "price": "169.00",
-      "availability": "https://schema.org/InStock"
-    }
-  }
-  </script>
-</head>
+    </script>
+  </head>  
 
   <!-- 1) Reset to English BEFORE anything else -->
   <script>
