--- a/public/test2.html
+++ b/public/test2.html
@@ -1,34 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="images/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ExitMyTimeshares.com | Do It Yourself Timeshare Exit Kit ($229|£169|€199)</title>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="images/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ExitMyTimeshares.com | Do It Yourself Timeshare Exit Kit ($229|£169|€199)</title>
+
+  <!-- Hide Google Translate Bar + Branding -->
+  <style>
+    .goog-te-banner-frame.skiptranslate, 
+    .goog-te-gadget-icon, 
+    .goog-te-balloon-frame, 
+    .goog-logo-link, 
+    .goog-te-gadget-simple,
+    #goog-gt-tt, 
+    .goog-te-menu-value, 
+    .goog-te-menu-frame.skiptranslate {
+      display: none !important;
+    }
+    body {
+      top: 0 !important;
+    }
+  </style>
   
-    <!-- Hide Google Translate Bar + Branding -->
-    <style>
-      .goog-te-banner-frame.skiptranslate, 
-      .goog-te-gadget-icon, 
-      .goog-te-balloon-frame, 
-      .goog-logo-link, 
-      .goog-te-gadget-simple,
-      #goog-gt-tt, 
-      .goog-te-menu-value, 
-      .goog-te-menu-frame.skiptranslate {
-        display: none !important;
-      }
-      body {
-        top: 0 !important;
-      }
-    </style>
-  
-    <!-- SEO Meta Tags -->
-    <meta name="description"
-          content="Stuck in a timeshare? Our lawyer-vetted, Do-It-Yourself Exit Kit ($229|£169|€199) gives you step-by-step templates to cancel your contract—no lawyers required. 3–6 week turnaround, money-back guarantee." />
-    <meta name="keywords"
-          content="timeshare exit, cancel timeshare, DIY timeshare, timeshare cancellation kit, timeshare cancellation letters, club la costa, hilton resorts, diamond resorts, dri, anfi, wyndham, marriott, diamond" />
-  
-    <!-- Structured Data for Google (Product & Offer) -->
-    <script type="application/ld+json">
+  <!-- SEO Meta Tags -->
+  <meta name="description"
+        content="Stuck in a timeshare? Our lawyer-vetted, Do-It-Yourself Exit Kit ($229|£169|€199) gives you step-by-step templates to cancel your contract—no lawyers required. 3–6 week turnaround, money-back guarantee." />
+  <meta name="keywords"
+        content="timeshare exit, cancel timeshare, DIY timeshare, timeshare cancellation kit, timeshare cancellation letters, club la costa, hilton resorts, diamond resorts, dri, anfi, wyndham, marriott, diamond" />
+
+  <!-- Structured Data for Google (Product & Offer) -->
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "Product",
@@ -48,7 +50,30 @@
       }
     }
     </script>
-  </head>  
+  </head>
+
+  <body>
+    <!-- Hidden Google Translate widget -->
+    <div id="google_translate_element" style="display: none;"></div>
+  
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement({
+          pageLanguage: 'en',
+          includedLanguages: 'en,es,de,nl,fr,it,pt,sv,da,no,fi,el',
+          autoDisplay: false
+        }, 'google_translate_element');
+      }
+    </script>
+    <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  
+    <!-- Your full site content would go here -->
+  
+    <h1 style="text-align: center; margin-top: 100px;">✅ The HTML loads correctly now</h1>
+    <p style="text-align: center;">This is a placeholder. Reinsert your actual page layout and content here after confirming it works.</p>
+  
+  </body>
+  </html>
 
   <!-- 1) Reset to English BEFORE anything else -->
   <script>
